# onedof_testbench

./: .gitignore  CMakeLists.txt  Makefile
esmacat_applications/: CMakeCache.txt  CMakeLists.txt  Makefile
esmacat_applications/agree_esmacat_rt/: CMakeLists.txt  agree_app.cpp  agree_app.h  agree_common.cpp  agree_common.h  agree_display.cpp  agree_ease.cpp  agree_input.cpp  agree_joint_controller.cpp  agree_joint_controller.h  agree_joint_structs.h  agree_logger.h  agree_main.cpp  agree_parameters.cpp  agree_parameters.h  agree_robot.cpp  agree_robot.h  agree_shared_memory_comm.cpp  agree_shared_memory_comm.h
esmacat_applications/agree_esmacat_rt/configuration/onedof_config_files/: J1_actuator_maxon_ec45_26_50.json  J2_actuator_maxon_ec45_156_200.json  J4_actuator_maxon_ec45_81_200.json  J5_actuator_maxon_ec45_6_50.json  actuator_maxon_ec45_156.json
esmacat_applications/agree_master/: .gitmodules  README.md  agree_common.h  agree_manager.cpp  agree_manager.h  agree_motor_controller.cpp  agree_motor_controller.h  agree_parameters.cpp  agree_parameters.h  agree_robot.cpp  agree_robot.h  agree_structs.h  esmacat_shared_memory_comm.h  main.cpp
esmacat_applications/agree_master/epos4_driver/: esmacat_epos4_mod.cpp  esmacat_epos4_mod.h
esmacat_applications/my_project/: CMakeLists.txt  my_app.cpp  my_app.h
esmacat_applications/onedof_esmacat_rt/: CMakeLists.txt  Project.cbp  agree_display.cpp  agree_ease.h  agree_input.cpp  agree_joint_controller.cpp  agree_joint_controller.h  onedof_app.cpp  onedof_app.h  onedof_common.h  onedof_joint_structs.h  onedof_robot.cpp  onedof_robot.h  run.sh
esmacat_applications/onedof_esmacat_rt/configuration/onedof_config_files/: J0_actuator_maxon_ec45_156.json
esmacat_applications/onedof_fesjoint/: CMakeLists.txt  README.md  SOEM_ecat_log.1.csv  SOEM_ecat_log.2.csv  SOEM_ecat_log.3.csv  SOEM_ecat_log.4.csv  SOEM_ecat_log.5.csv  SOEM_ecat_log.csv  agree_input.cpp  agree_joint_controller.cpp  agree_joint_controller.h  agree_show.cpp  esmacat_app_loop_time_stats.txt  esmacat_log.1.csv  esmacat_log.2.csv  esmacat_log.3.csv  esmacat_log.4.csv  esmacat_log.5.csv  esmacat_log.6.csv  esmacat_log.7.csv  esmacat_log.8.csv  esmacat_log.9.csv  esmacat_log.csv  feshandler.cpp  feshandler.h  global_variables.h  headers.h  onedof_app.cpp  onedof_app.h  onedof_fesjoint  onedof_fesjoint_display  onedof_fesjoint_rehamove  onedof_fesjoint_show  onedof_rehamove.cpp  onedof_rehamove_app.cpp  onedof_rehamove_app.h  onedof_rehamove_class.cpp  onedof_rehamove_class.h  onedof_robot.cpp  onedof_robot.h  (+5 more)
esmacat_applications/onedof_fesjoint/configuration/onedof_config_files/: J0_actuator_maxon_ec45_156.json
esmacat_applications/onedof_fesjoint/onedof_rehamove/: CMakeLists.txt
esmacat_applications/onedof_fesjoint/stimulation/: CMakeLists.txt
esmacat_applications/onedof_fesjoint_rebecca/: CMakeLists.txt  agree_display.cpp  agree_input.cpp  agree_joint_controller.cpp  headers.h  onedof_app.cpp  onedof_ease.cpp  onedof_ease.h  onedof_fesjoint_show.cpp  onedof_fesjoint_show.h  onedof_joint_structs.h  onedof_logger.h  onedof_main.cpp  onedof_rehamove.cpp  onedof_rehamove.h  onedof_rehamove_app.cpp  onedof_rehamove_app.h  onedof_rehamove_class.cpp  onedof_robot.cpp  onedof_shared_memory_comm.h  onedof_shared_memory_comm_rebecca.h
esmacat_applications/onedof_fesjoint_rebecca/configuration/onedof_config_files/: J0_actuator_maxon_ec45_156.json
esmacat_applications/onedof_fesjoint_rebecca/onedof_rehamove/: CMakeLists.txt.user.21  CMakeLists.txt.user.4.8-pre1
esmacat_applications/project_examples/: CMakeLists.txt
esmacat_applications/project_examples/arduino_shield/: esmacat_main.cpp  my_app.cpp
esmacat_applications/project_examples/mini_torque_driver/: onedof_app.cpp  onedof_app.h  onedof_main.cpp  shared_memory_comm.cpp  shared_memory_comm.h  user_input.cpp
esmacat_applications/rehamove/: CMakeLists.txt  interface.cpp  interface.h  main.cpp  onedof_shared_memory_comm.cpp  pid.cpp  pid.h  run_rehamove.sh
esmacat_core/application/: CMakeLists.txt  Makefile  ecat_main  ecat_main.cpp  slaveinfo
esmacat_core/include/: error_list.h  slave.h
esmacat_core/src/: master.cpp  slave.cpp
esmacat_slave_drivers/: Makefile
esmacat_slave_drivers/drivers/: actuator_controller_interface.cpp  actuator_controller_interface.h  analog_input.h  esmacat_epos4.h  joint_controller.cpp  loadcell_interf.h
esmacat_slave_drivers/utilities/: Makefile
esmacat_slave_drivers/utilities/slave_import_wizard/: Makefile  slave_import_wizard  slave_import_wizard.c
old_Cmake/: CMakeLists.txt.user.21  CMakeLists.txt.user.22  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.4.8-pre1
onedof_config_files/: J1_actuator_maxon_ec45_26_50.json  J2_actuator_maxon_ec45_156_200.json  J3_actuator_maxon_ec45_26_50.json  J4_actuator_maxon_ec45_81_200.json
